--- a/templates/permissions.html
+++ b/templates/permissions.html
@@ -14,7 +14,7 @@
         <tbody>
             {% for permission in permissions %}
             <tr>
-                <td>{{ permission.id }}</td>
+                <td>{{ loop.index }}</td>
                 <td>{{ permission.name }}</td>
                 <td>{{ permission.description }}</td>
                 <td>
@@ -22,7 +22,7 @@
                         <button class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#editPermissionModal{{ permission.id }}">Sửa</button>
                         
                         <!-- Nút Xóa -->
-                        <a href="{{ url_for('delete_permission', permission_id=permission.id) }}" class="btn btn-danger btn-sm">Xóa</a>
+                        <a href="{{ url_for('force_delete_permission', permission_id=permission.id) }}" class="btn btn-danger btn-sm">Xóa</a>
 
                         <!-- Modal chỉnh sửa quyền -->
                         <div class="modal fade" id="editPermissionModal{{ permission.id }}" tabindex="-1" aria-labelledby="editPermissionModalLabel" aria-hidden="true">
